--- a/src/android/AboutPage.xaml
+++ b/src/android/AboutPage.xaml
@@ -19,10 +19,10 @@
 					<Button x:Name="LanguageSelector" />
 				</StackLayout>
 
-				<StackLayout Orientation="Horizontal" HorizontalOptions="Center">
+				<FlexLayout JustifyContent="Center" Direction="Row" Wrap="Wrap">
 					<Button x:Name="ManualPage" HorizontalOptions="Center" />
-					<Button x:Name="ResetTips" HorizontalOptions="Center" />
-				</StackLayout>
+					<Button x:Name="UpdateTemplates" HorizontalOptions="Center" />
+				</FlexLayout>
 
 				<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
 					WidthRequest="200" Color="#606060" Margin="9" />
@@ -34,7 +34,7 @@
 					<Button x:Name="CommunityPage" HorizontalOptions="Center" />
 				</FlexLayout>
 
-				<Label x:Name="Filler3" />
+				<Label />
 
 			</StackLayout>
 		</ScrollView>
