--- a/src/android/AboutPage.xaml
+++ b/src/android/AboutPage.xaml
@@ -33,6 +33,9 @@
 				<Button x:Name="DevPage" HorizontalOptions="Center" />
 				<Button x:Name="CommunityPage" HorizontalOptions="Center" />
 
+				<Label x:Name="EFTLabel" />
+				<Editor x:Name="EFTField" HorizontalOptions="Fill" />
+
 				<Label />
 
 			</StackLayout>
