--- a/src/android/SettingsPage.xaml
+++ b/src/android/SettingsPage.xaml
@@ -11,16 +11,34 @@
 			<Label x:Name="ServiceSettingsLabel" />
 
 			<StackLayout Orientation="Horizontal" HorizontalOptions="Center">
-				<Switch x:Name="AllowStart" VerticalOptions="Center" />
+				<Switch x:Name="AllowStartSwitch" VerticalOptions="Center" />
 				<Label x:Name="AllowStartLabel" VerticalTextAlignment="Center" />
 			</StackLayout>
 
 			<StackLayout Orientation="Horizontal" HorizontalOptions="Center">
-				<Label Text="   " VerticalTextAlignment="Center" />
 				<Button x:Name="RequestStepIncButton" HorizontalOptions="Start" />
 				<Label x:Name="RequestStepFieldLabel" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
 				<Button x:Name="RequestStepDecButton" HorizontalOptions="Start" />
 			</StackLayout>
+
+			<FlexLayout Direction="Row" Wrap="Wrap" JustifyContent="Center">
+
+				<StackLayout Orientation="Horizontal">
+					<Switch x:Name="AllowSoundSwitch" VerticalOptions="Center" />
+					<Label x:Name="AllowSoundLabel" VerticalTextAlignment="Center" />
+				</StackLayout>
+
+				<StackLayout Orientation="Horizontal">
+					<Switch x:Name="AllowLightSwitch" VerticalOptions="Center" />
+					<Label x:Name="AllowLightLabel" VerticalTextAlignment="Center" />
+				</StackLayout>
+
+				<StackLayout Orientation="Horizontal">
+					<Switch x:Name="AllowVibroSwitch" VerticalOptions="Center" />
+					<Label x:Name="AllowVibroLabel" VerticalTextAlignment="Center" />
+				</StackLayout>
+
+			</FlexLayout>
 
 			<!-- Настройки журнала -->
 			<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
@@ -32,12 +50,12 @@
 
 				<StackLayout Orientation="Horizontal">
 					<Switch x:Name="ReadModeSwitch" VerticalOptions="Center" />
-					<Label x:Name="ReadModeLabel" VerticalOptions="Center" />
+					<Label x:Name="ReadModeLabel" VerticalTextAlignment="Center" />
 				</StackLayout>
 
 				<StackLayout Orientation="Horizontal">
 					<Switch x:Name="RightAlignmentSwitch" VerticalOptions="Center" />
-					<Label x:Name="RightAlignmentLabel" VerticalOptions="Center" />
+					<Label x:Name="RightAlignmentLabel" VerticalTextAlignment="Center" />
 				</StackLayout>
 
 				<StackLayout Orientation="Horizontal">
