--- a/src/android/SettingsPage.xaml
+++ b/src/android/SettingsPage.xaml
@@ -7,6 +7,14 @@
 		<StackLayout>
 			<Label x:Name="HeaderLabel" />
 
+			<!-- Мастер оповещений -->
+			<Label x:Name="NotWizardLabel" />
+
+			<Button x:Name="NotWizardButton" HorizontalOptions="Center" />
+
+			<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
+				WidthRequest="200" Color="#606060" Margin="12" />
+
 			<!-- Настройки службы -->
 			<Label x:Name="ServiceSettingsLabel" />
 
@@ -66,11 +74,6 @@
 				</StackLayout>
 
 			</FlexLayout>
-
-			<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
-				WidthRequest="200" Color="#606060" Margin="12" />
-
-			<Button x:Name="NotWizardButton" HorizontalOptions="Center" />
 
 			<Label />
 
