--- a/src/android/NotSettingsPage.xaml
+++ b/src/android/NotSettingsPage.xaml
@@ -3,87 +3,85 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RD_AAOW.NotSettingsPage">
 
-	<ScrollView>
-		<StackLayout>
-			<Label x:Name="HeaderLabel" />
+	<StackLayout >
+		<Label x:Name="HeaderLabel" />
 
-			<!-- Управление оповещениями -->
-			<StackLayout Orientation="Horizontal" Margin="3">
-				<Button x:Name="SelectedNotification" VerticalOptions="Center" HorizontalOptions="FillAndExpand" />
-				<Label Text=" " />
+		<!-- Управление оповещениями -->
+		<StackLayout Orientation="Horizontal" Margin="3">
+			<Button x:Name="SelectedNotification" VerticalOptions="Center" HorizontalOptions="FillAndExpand" />
+			<Button x:Name="ApplyButton" VerticalOptions="Center" />
+			<Label Text=" " />
 
-				<Button x:Name="ShareTemplateButton" VerticalOptions="Center" HorizontalOptions="End" />
-				<Label Text=" " />
+			<Button x:Name="AddButton" VerticalOptions="Center"  />
+			<Button x:Name="ShareTemplateButton" VerticalOptions="Center" />
+			<Button x:Name="DeleteButton" VerticalOptions="Center" HorizontalOptions="End" />
+		</StackLayout>
 
-				<Button x:Name="DeleteButton" VerticalOptions="Center" HorizontalOptions="End" />
-			</StackLayout>
+		<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
+			WidthRequest="200" Color="#606060" Margin="6" />
 
-			<!-- Управление отдельным оповещением -->
-			<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
-				WidthRequest="200" Color="#606060" Margin="6" />
+		<!-- Управление отдельным оповещением -->
+		<ScrollView>
+			<StackLayout>
 
-			<FlexLayout Direction="Row" Wrap="Wrap" JustifyContent="Center">
-				<StackLayout Orientation="Horizontal" Margin="3">
+				<StackLayout Orientation="Horizontal">
 					<Label x:Name="NameFieldLabel" VerticalOptions="Center" />
 					<Editor x:Name="NameField" VerticalOptions="Center" />
 				</StackLayout>
 
-				<StackLayout Orientation="Horizontal" Margin="3">
-					<Label x:Name="LinkFieldLabel" VerticalOptions="Center" />
-					<Button x:Name="LinkFieldButton" VerticalOptions="Center" />
-				</StackLayout>
-
-				<StackLayout Orientation="Horizontal" Margin="3">
-					<Label Text="   " />
-					<Button x:Name="OccIncButton" VerticalOptions="Center" />
-					<Label x:Name="OccFieldLabel" VerticalOptions="Center" />
-					<Button x:Name="OccDecButton" VerticalOptions="Center" />
-					<Label Text="   " />
-				</StackLayout>
-
-				<StackLayout Orientation="Horizontal" Margin="3">
-					<Label x:Name="EnabledLabel" VerticalOptions="Center" />
+				<StackLayout Orientation="Horizontal" >
 					<Switch x:Name="EnabledSwitch" VerticalOptions="Center" />
+					<Label x:Name="EnabledLabel" VerticalOptions="Center" />
 				</StackLayout>
 
-				<StackLayout Orientation="Horizontal" Margin="3">
-					<Label Text="   " />
-					<Label x:Name="BeginningFieldLabel" VerticalOptions="Center" />
-					<Editor x:Name="BeginningField" VerticalOptions="Center" />
-				</StackLayout>
+				<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
+					WidthRequest="100" Color="#606060" Margin="6" />
 
-				<StackLayout Orientation="Horizontal" Margin="3">
-					<Label Text="   " />
-					<Label x:Name="EndingFieldLabel" VerticalOptions="Center" />
-					<Editor x:Name="EndingField" VerticalOptions="Center" />
-				</StackLayout>
+				<FlexLayout Direction="Row" Wrap="Wrap" JustifyContent="Start">
 
-				<StackLayout Orientation="Horizontal" HorizontalOptions="Center">
+					<StackLayout Orientation="Horizontal" Margin="3">
+						<Label x:Name="LinkFieldLabel" VerticalOptions="Center" />
+						<Button x:Name="LinkFieldButton" VerticalOptions="Center" />
+					</StackLayout>
+
+					<StackLayout Orientation="Horizontal" Margin="3">
+						<Label x:Name="BeginningFieldLabel" VerticalOptions="Center" />
+						<Editor x:Name="BeginningField" VerticalOptions="Center" />
+					</StackLayout>
+
+					<StackLayout Orientation="Horizontal" Margin="3">
+						<Label x:Name="EndingFieldLabel" VerticalOptions="Center" />
+						<Editor x:Name="EndingField" VerticalOptions="Center" />
+					</StackLayout>
+
+					<StackLayout Orientation="Horizontal" Margin="3">
+						<Button x:Name="OccIncButton" VerticalOptions="Center" />
+						<Label x:Name="OccFieldLabel" VerticalOptions="Center" />
+						<Button x:Name="OccDecButton" VerticalOptions="Center" />
+					</StackLayout>
+
+				</FlexLayout>
+
+				<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
+					WidthRequest="100" Color="#606060" Margin="6" />
+
+				<StackLayout Orientation="Horizontal" >
 					<Switch x:Name="ComparatorSwitch" VerticalOptions="Center" />
 					<Label x:Name="ComparatorLabel" VerticalTextAlignment="Center" />
 				</StackLayout>
 
-				<StackLayout Orientation="Horizontal" HorizontalOptions="Center">
+				<StackLayout Orientation="Horizontal" >
 					<Button x:Name="ComparatorType" VerticalOptions="Center" />
 					<Editor x:Name="ComparatorValue" VerticalOptions="Center" />
 				</StackLayout>
 
-				<StackLayout Orientation="Horizontal" HorizontalOptions="Center">
+				<StackLayout Orientation="Horizontal" >
 					<Switch x:Name="IgnoreMisfitsSwitch" VerticalOptions="Center" />
 					<Label x:Name="IgnoreMisfitsLabel" VerticalTextAlignment="Center" />
 				</StackLayout>
-				
-			</FlexLayout>
 
-			<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
-				WidthRequest="200" Color="#606060" Margin="12" />
-
-			<StackLayout Orientation="Horizontal" Margin="6" HorizontalOptions="Center">
-				<Button x:Name="ApplyButton" VerticalOptions="Center" />
-				<Label Text="     " />
-				<Button x:Name="AddButton" VerticalOptions="Center" />
 			</StackLayout>
+		</ScrollView>
 
-		</StackLayout>
-	</ScrollView>
+	</StackLayout>
 </ContentPage>
