--- a/src/android/LogPage.xaml
+++ b/src/android/LogPage.xaml
@@ -9,7 +9,9 @@
 
 		<ListView x:Name="MainLog" HorizontalOptions="Fill" />
 
-		<Grid x:Name="StatusBarGrid">
+		<Button x:Name="CenterButton" />
+
+		<!--<Grid x:Name="StatusBarGrid">
 			<Grid.RowDefinitions>
 				<RowDefinition Height="50" />
 			</Grid.RowDefinitions>
@@ -23,7 +25,7 @@
 			<Button Grid.Row="0" Grid.Column="0" x:Name="GetGMJ" VerticalOptions="Center" />
 			<Button Grid.Row="0" Grid.Column="1" x:Name="StatusBar" HorizontalOptions="Center" VerticalOptions="Center"/>
 			<Button Grid.Row="0" Grid.Column="2" x:Name="AllNewsButton" VerticalOptions="Center" />
-		</Grid>
+		</Grid>-->
 
 	</StackLayout>
 </ContentPage>
