--- a/src/android/AboutPage.xaml
+++ b/src/android/AboutPage.xaml
@@ -32,9 +32,23 @@
 				<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
 					WidthRequest="200" Color="#505050" Margin="9" />
 
-				<Label x:Name="LanguageLabel" />
+				<Label x:Name="GenericSettingsLabel" />
+				<Label x:Name="RestartTipLabel" />
 
-				<Button x:Name="LanguageSelector" HorizontalOptions="Center" />
+				<StackLayout Orientation="Horizontal">
+					<Label x:Name="LanguageLabel" VerticalOptions="Center" />
+					<Button x:Name="LanguageSelector" VerticalOptions="Center" />
+				</StackLayout>
+
+				<StackLayout Orientation="Horizontal">
+					<Label x:Name="FontSizeLabel" VerticalOptions="Center" />
+
+					<Button x:Name="FontSizeInc" VerticalOptions="Center" />
+					<Label x:Name="FontSizeField" VerticalOptions="Center" />
+					<Button x:Name="FontSizeDec" VerticalOptions="Center" />
+				</StackLayout>
+
+				<Label />
 
 			</StackLayout>
 		</ScrollView>
