--- a/src/android/SettingsPage.xaml
+++ b/src/android/SettingsPage.xaml
@@ -40,6 +40,8 @@
 					<Label x:Name="IndicateOnlyUrgentLabel" VerticalTextAlignment="Center" />
 				</StackLayout>
 
+				<Button x:Name="SaveQuietSound" HorizontalOptions="Center" />
+
 				<StackLayout Orientation="Horizontal">
 					<Switch x:Name="AllowSoundSwitch" VerticalOptions="Center" />
 					<Label x:Name="AllowSoundLabel" VerticalTextAlignment="Center" />
@@ -83,6 +85,14 @@
 
 				<Label x:Name="CenterButtonLabel" />
 				<Button x:Name="CenterButtonFunction" HorizontalOptions="Center" />
+
+				<!-- Maintenance section -->
+
+				<Label x:Name="Maintenance_GMJStatus" HorizontalOptions="Center" />
+				<Button x:Name="Maintenance_ResetFreeSet" HorizontalOptions="Center" />
+				<Button x:Name="Maintenance_GetRemovedSet" HorizontalOptions="Center" />
+
+				<!-- -->
 
 				<Label />
 
